// protoc --go_out=pb --go_opt=paths=source_relative --go-grpc_out=pb --go-grpc_opt=paths=source_relative email.proto

syntax = "proto3";
package pb;

option go_package = "./pb";

message GenerateVerificationCodeRequest {
    string phone_or_email = 1;
    int32 purpose = 2;
}

message GenerateVerificationCodeResponse {
    int32 code = 1;
    string msg = 2;
}

message VerifyCodeRequest {
    string phone_or_email = 1;
    string verification_code = 2;
}

message VerifyCodeResponse {
    int32 code = 1;
    string msg = 2; 
}
service Email {
    rpc GenerateVerificationCode (GenerateVerificationCodeRequest) returns (GenerateVerificationCodeResponse) {
    }
    rpc VerifyCode (VerifyCodeRequest) returns (VerifyCodeResponse) {
    }
}
